--- a/package.json
+++ b/package.json
@@ -25,7 +25,10 @@
     "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
     "font-awesome": "^4.7.0",
+    "ngx-bootstrap": "^5.1.0",
+    "ngx-bootstrap-modal": "^2.0.1",
     "ngx-loading": "^3.0.1",
+    "ngx-pagination": "^4.1.0",
     "primeicons": "^1.0.0",
     "primeng": "^7.1.3",
     "rxjs": "~6.3.3",
